--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br>
 <br>
 <center style="background-color:rgba(10, 10, 10,0.7);border-style: solid; border-color:purple;">
-<font color="#800080" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Verisa</b><br>Of The Red Flame</font>
+<font color="#800080" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Verisa</b><br>The Red Flame of Iwagakure</font>
  <br>
 
  
